ci/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emeris
  namespace: emeris
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 2s;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  rules:
  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/liquidity(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: liquidity
            port:
              number: 1317

      - path: /v1/oracle(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: price-oracle
            port:
              number: 8000

      - path: /v1/dexinfo(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: dexinfo
            port:
              number: 8080

      - path: /v1/cns(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cns-server
            port:
              number: 8000

      - path: /v1(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-server
            port:
              number: 8000

  tls:
  - hosts:
    - staging.demeris.io
    secretName: emeris-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emeris-websockets
  namespace: emeris
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /websocket
spec:
  rules:

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/cosmos-hub/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: cosmos-hub
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/akash/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: akash
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/band/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: band
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/bitcanna/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: bitcanna
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/bitsong/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: bitsong
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/cheqd/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: cheqd
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/crypto-org/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: crypto-org
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/emoney/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: emoney
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/iris/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: iris
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/ixo/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: ixo
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/juno/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: juno
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/ki/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: ki
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/likecoin/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: likecoin
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/microtick/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: microtick
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/oraichain/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: oraichain
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/osmosis/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: osmosis
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/persistence/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: persistence
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/regen/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: regen
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/rizon/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: rizon
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/secret/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: secret
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/sentinel/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: sentinel
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/sifchain/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: sifchain
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/stargaze/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: stargaze
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/starname/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: starname
            port:
              number: 26657

  - host: staging.demeris.io
    http:
      paths:
      - path: /v1/chain/terra/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: terra
            port:
              number: 26657

  tls:
  - hosts:
    - staging.demeris.io
    secretName: emeris-cert
